                    Apache Solr - Analysis Extras
                            Release Notes

Introduction
------------
The analysis-extras plugin provides additional analyzers that rely
upon large dependencies/dictionaries.

It includes integration with ICU for multilingual support, and 
analyzers for Chinese and Polish.


$Id$
==================  4.0.0-dev ==============

* SOLR-2396: Add ICUCollationField, which is much more efficient than
  the Solr 3.x ICUCollationKeyFilterFactory, and also supports
  Locale-sensitive range queries.  (rmuir)

==================  3.6.0 ==================

* SOLR-2919: Added parametric tailoring options to ICUCollationKeyFilterFactory.
  These can be used to customize range query/sort behavior, for example to
  support numeric collation, ignore punctuation/whitespace, ignore accents but
  not case, control whether upper/lowercase values are sorted first, etc.  (rmuir)

==================  3.5.0 ==================

(No Changes)

==================  3.4.0 ==================

(No Changes)

==================  3.3.0 ==================

(No Changes)

==================  3.2.0 ==================

(No Changes)

==================  3.1.0 ==================

* SOLR-2210: Add icu-based tokenizer and filters to contrib/analysis-extras (rmuir)

* SOLR-1336: Add SmartChinese (word segmentation for Simplified Chinese) 
  tokenizer and filters to contrib/analysis-extras (rmuir)

* SOLR-2211,LUCENE-2763: Added UAX29URLEmailTokenizerFactory, which implements
  UAX#29, a unicode algorithm with good results for most languages, as well as
  URL and E-mail tokenization according to the relevant RFCs.
  (Tom Burton-West via rmuir)

* SOLR-2237: Added StempelPolishStemFilterFactory to contrib/analysis-extras (rmuir)