@@ -2,11 +2,12 @@ The analysis-extras plugin provides additional analyzers that rely
 upon large dependencies/dictionaries.
 
 It includes integration with ICU for multilingual support, and 
-analyzers for Chinese and Polish.
+analyzers for Chinese, Japanese, and Polish.
 
 Relies upon the following lucene components (in lucene-libs/):
 
  * lucene-analyzers-icu-X.Y.jar
+ * lucene-analyzers-kuromoji-X.Y.jar
  * lucene-analyzers-smartcn-X.Y.jar
  * lucene-analyzers-stempel-X.Y.jar
  
